<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="email"
            android:importantForAutofill="yes"
            android:ems="10"
            android:id="@+id/register_email"
            android:hint="@string/register_email" android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:ems="10"
            android:id="@+id/register_password" android:hint="@string/register_password" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/register_email" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:importantForAutofill="no"
            android:ems="10"
            android:id="@+id/register_password_repeat" android:hint="@string/register_password_repeat" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/register_password" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <RadioGroup
            android:layout_width="168dp"
            android:layout_height="0dp"
            android:id="@+id/register_gender"
            android:orientation="vertical"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/register_register"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_gender_text" app:layout_constraintHorizontal_bias="0.825"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/register_birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/register_birth_date" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/register_password_repeat"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/register_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_register" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/register_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/register_gender"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/register_gender_text" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/register_birth_date" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/register_gender"
            app:layout_constraintHorizontal_bias="0.422"/>
</android.support.constraint.ConstraintLayout>